--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "reflect-metadata": "^0.1.8",
-    "sharp": "^0.22.1"
+    "sharp": "^0.22.1",
+    "terser": "^4.0.0",
+    "uglify-es": "^3.3.9"
   },
   "devDependencies": {
     "@types/react": "^16.8.18",
